--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <style>
         body {
             font-family: 'Plus Jakarta Sans', sans-serif;
-            background-color: #000000;
+            background-color: #020617; /* Slate 950 */
             color: #f9fafb;
             overflow-x: hidden;
+            margin: 0;
         }
         @keyframes pulse-slow {
             0%, 100% { opacity: 0.2; transform: scale(1); }
@@ -63,7 +64,7 @@
 </head>
 <body>
     <div id="root"></div>
-    <!-- Punto de entrada para React -->
+    <!-- Vite se encarga de procesar este archivo y convertirlo en algo que el navegador entienda perfectamente -->
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
