--- a/index.html
+++ b/index.html
@@ -11,47 +11,50 @@
     <style>
         body {
             font-family: 'Plus Jakarta Sans', sans-serif;
-            background-color: #020617; /* Slate 950 (Azul muy oscuro, casi negro) */
+            background-color: #020617;
             color: #f9fafb;
             margin: 0;
-            overflow-x: hidden;
+            overflow: hidden;
         }
-        @keyframes pulse-slow {
-            0%, 100% { opacity: 0.2; transform: scale(1); }
-            50% { opacity: 0.4; transform: scale(1.1); }
-        }
-        .animate-pulse-slow {
-            animation: pulse-slow 8s ease-in-out infinite;
-        }
-        @keyframes float {
-            0%, 100% { transform: translateY(0px); }
-            50% { transform: translateY(-20px); }
-        }
-        .animate-float {
-            animation: float 6s ease-in-out infinite;
+        @keyframes spin { to { transform: rotate(360deg); } }
+        .animate-spin-custom { animation: spin 1s linear infinite; }
+        .loading-overlay {
+            position: fixed;
+            inset: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background: #020617;
+            z-index: 9999;
+            transition: opacity 0.5s ease;
         }
     </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "@google/genai": "https://esm.sh/@google/genai@1.3.0",
+    "jszip": "https://esm.sh/jszip@3.10.1",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "jszip": "https://esm.sh/jszip@^3.10.1"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
 <body>
     <div id="root">
-        <!-- Este texto solo se ve si React falla al cargar -->
-        <div style="display: flex; justify-content: center; align-items: center; height: 100vh; color: #444;">
-            Cargando NeuroSpark...
+        <div class="loading-overlay" id="loading-screen">
+            <div style="width: 48px; height: 48px; border: 4px solid #1e293b; border-top-color: #6366f1; border-radius: 50%;" class="animate-spin-custom"></div>
+            <p style="margin-top: 24px; font-weight: 800; letter-spacing: 0.3em; text-transform: uppercase; font-size: 10px; color: #6366f1;">
+                NeuroSpark <span style="color: #94a3b8;">Sincronizando</span>
+            </p>
         </div>
     </div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
