--- a/index.html
+++ b/index.html
@@ -30,22 +30,16 @@
             transition: opacity 0.5s ease;
         }
     </style>
-    <script>
-        // Shim para evitar que el navegador falle al encontrar process.env
-        window.process = { env: { NODE_ENV: 'production' } };
-    </script>
-    <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "@google/genai": "https://esm.sh/@google/genai@1.3.0",
-    "jszip": "https://esm.sh/jszip@3.10.1",
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "jszip": "https://esm.sh/jszip@^3.10.1"
   }
 }
 </script>
@@ -59,6 +53,18 @@
             </p>
         </div>
     </div>
-    <script type="module" src="index.tsx"></script>
+    
+    <script>
+        // Failsafe: Si a los 4 segundos no ha cargado React, quitamos el loader por la fuerza
+        setTimeout(() => {
+            const loader = document.getElementById('loading-screen');
+            if (loader) {
+                console.log('Failsafe: Forzando ocultación de loader');
+                loader.style.opacity = '0';
+                setTimeout(() => loader.remove(), 500);
+            }
+        }, 4000);
+    </script>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
