--- a/index.html
+++ b/index.html
@@ -1,70 +1,1 @@
-<!DOCTYPE html>
-<html lang="es" class="scroll-smooth">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NeuroSpark Ventures - Eléctrico & Divergente</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Plus Jakarta Sans', sans-serif;
-            background-color: #020617;
-            color: #f9fafb;
-            margin: 0;
-            overflow-x: hidden;
-        }
-        @keyframes spin { to { transform: rotate(360deg); } }
-        .animate-spin-custom { animation: spin 1s linear infinite; }
-        .loading-overlay {
-            position: fixed;
-            inset: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background: #020617;
-            z-index: 9999;
-            transition: opacity 0.5s ease;
-        }
-    </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "jszip": "https://esm.sh/jszip@^3.10.1"
-  }
-}
-</script>
-</head>
-<body>
-    <div id="root">
-        <div class="loading-overlay" id="loading-screen">
-            <div style="width: 48px; height: 48px; border: 4px solid #1e293b; border-top-color: #6366f1; border-radius: 50%;" class="animate-spin-custom"></div>
-            <p style="margin-top: 24px; font-weight: 800; letter-spacing: 0.3em; text-transform: uppercase; font-size: 10px; color: #6366f1;">
-                NeuroSpark <span style="color: #94a3b8;">Sincronizando</span>
-            </p>
-        </div>
-    </div>
-    
-    <script>
-        // Failsafe: Si a los 4 segundos no ha cargado React, quitamos el loader por la fuerza
-        setTimeout(() => {
-            const loader = document.getElementById('loading-screen');
-            if (loader) {
-                console.log('Failsafe: Forzando ocultación de loader');
-                loader.style.opacity = '0';
-                setTimeout(() => loader.remove(), 500);
-            }
-        }, 4000);
-    </script>
-    <script type="module" src="/index.tsx"></script>
-</body>
-</html>
+index.html
