--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-index.html
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NeuroSpark Ventures | ADHD Power</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Plus Jakarta Sans', sans-serif; background-color: #020617; color: white; margin: 0; }
+        .loading-screen {
+            position: fixed; inset: 0; background: #020617; z-index: 100;
+            display: flex; flex-direction: column; align-items: center; justify-content: center;
+            transition: opacity 0.5s ease;
+        }
+        @keyframes spin { to { transform: rotate(360deg); } }
+        .spinner { width: 40px; height: 40px; border: 4px solid #1e293b; border-top-color: #6366f1; border-radius: 50%; animation: spin 1s linear infinite; }
+    </style>
+<script type="importmap">
+{
+  "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "jszip": "https://esm.sh/jszip@^3.10.1"
+  }
+}
+</script>
+</head>
+<body>
+    <div id="loading-screen" class="loading-screen">
+        <div class="spinner"></div>
+        <p style="margin-top: 20px; font-weight: 800; letter-spacing: 0.2em; color: #6366f1; font-size: 12px; text-transform: uppercase;">Iniciando NeuroSpark...</p>
+    </div>
+    <div id="root"></div>
+    <script>
+        // Si a los 3 segundos no ha cargado, forzamos la entrada
+        setTimeout(() => {
+            const loader = document.getElementById('loading-screen');
+            if (loader) loader.style.opacity = '0';
+            setTimeout(() => loader?.remove(), 500);
+        }, 3000);
+    </script>
+</body>
+</html>
