--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NeuroSpark Ventures | ADHD Power</title>
+    <title>NeuroSpark | ADHD Ventures</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Plus Jakarta Sans', sans-serif; background-color: #020617; color: white; margin: 0; }
-        .loading-screen {
+        body { font-family: 'Plus Jakarta Sans', sans-serif; background: #020617; color: white; margin: 0; }
+        #loader {
             position: fixed; inset: 0; background: #020617; z-index: 100;
             display: flex; flex-direction: column; align-items: center; justify-content: center;
             transition: opacity 0.5s ease;
         }
+        .spinner { width: 40px; height: 40px; border: 3px solid #1e293b; border-top-color: #6366f1; border-radius: 50%; animation: spin 1s linear infinite; }
         @keyframes spin { to { transform: rotate(360deg); } }
-        .spinner { width: 40px; height: 40px; border: 4px solid #1e293b; border-top-color: #6366f1; border-radius: 50%; animation: spin 1s linear infinite; }
     </style>
 <script type="importmap">
 {
@@ -31,17 +31,17 @@
 </script>
 </head>
 <body>
-    <div id="loading-screen" class="loading-screen">
+    <div id="loader">
         <div class="spinner"></div>
-        <p style="margin-top: 20px; font-weight: 800; letter-spacing: 0.2em; color: #6366f1; font-size: 12px; text-transform: uppercase;">Iniciando NeuroSpark...</p>
+        <p style="margin-top: 1rem; font-size: 10px; letter-spacing: 0.3em; color: #6366f1; font-weight: 800;">NEUROSPARK LOADING</p>
     </div>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
     <script>
-        // Si a los 3 segundos no ha cargado, forzamos la entrada
+        // Failsafe: Si React no arranca en 3s, quitamos el loader para ver qué pasa
         setTimeout(() => {
-            const loader = document.getElementById('loading-screen');
-            if (loader) loader.style.opacity = '0';
-            setTimeout(() => loader?.remove(), 500);
+            const l = document.getElementById('loader');
+            if(l) { l.style.opacity = '0'; setTimeout(() => l.remove(), 500); }
         }, 3000);
     </script>
 </body>
